# frameworkd

./: README.md
.github/workflows/: main.yaml
data/: frameworkd.service  org.stefanhoelzl.frameworkd.conf  org.stefanhoelzl.frameworkd.service
gnome-extension/: extension.js  metadata.json
service/: Cargo.toml
service/src/: main.rs
