[package]
name = "frameworkd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framework_lib = { git = "https://github.com/FrameworkComputer/framework-system.git" }
tokio = { version = "*", features = ["macros", "rt"]}
zbus = "*"